--- a/july/july/july.vcxproj.filters
+++ b/july/july/july.vcxproj.filters
@@ -18,5 +18,20 @@
     <ClCompile Include="a.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11266.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11400.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11280.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="kosaraju%27s algorithm.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tarjan%27s algorithm.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
