--- a/july/july/july.vcxproj.filters
+++ b/july/july/july.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="4196.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2261.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
